// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse renders correctly 1`] = `
<div
  class="za-collapse"
>
  <div
    class="za-collapse-item"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        50元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          50元套餐内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with activeKey 1`] = `
<div
  class="za-collapse"
>
  <div
    class="za-collapse-item active"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        50元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          50元套餐内容
        </div>
      </div>
    </div>
  </div>
  <div
    class="za-collapse-item"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        100元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          100元套餐内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with animated 1`] = `
<div
  class="za-collapse"
>
  <div
    class="za-collapse-item"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        50元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          50元套餐内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with collapse mode 1`] = `
<div
  class="za-collapse"
>
  <div
    class="za-collapse-item"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        50元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          50元套餐内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with defaultActiveKey 1`] = `
<div
  class="za-collapse"
>
  <div
    class="za-collapse-item"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        50元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          50元套餐内容
        </div>
      </div>
    </div>
  </div>
  <div
    class="za-collapse-item active"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        100元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          100元套餐内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with number activeKey 1`] = `
<div
  class="za-collapse"
>
  <div
    class="za-collapse-item active"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        50元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          50元套餐内容
        </div>
      </div>
    </div>
  </div>
  <div
    class="za-collapse-item"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        100元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          100元套餐内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with number defaultActiveKey 1`] = `
<div
  class="za-collapse"
>
  <div
    class="za-collapse-item active"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        50元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          50元套餐内容
        </div>
      </div>
    </div>
  </div>
  <div
    class="za-collapse-item"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        100元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          100元套餐内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with string activeKey 1`] = `
<div
  class="za-collapse"
>
  <div
    class="za-collapse-item"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        50元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          50元套餐内容
        </div>
      </div>
    </div>
  </div>
  <div
    class="za-collapse-item active"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        100元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          100元套餐内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse renders correctly with string defaultActiveKey 1`] = `
<div
  class="za-collapse"
>
  <div
    class="za-collapse-item"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        50元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          50元套餐内容
        </div>
      </div>
    </div>
  </div>
  <div
    class="za-collapse-item active"
  >
    <div
      class="za-collapse-item-title"
    >
      <div>
        100元套餐
      </div>
      <div
        class="za-collapse-item-arrow"
      />
    </div>
    <div
      class="za-collapse-item-content za-collapse-item-content-anim"
    >
      <div
        class="za-collapse-item-content-inner"
      >
        <div>
          100元套餐内容
        </div>
      </div>
    </div>
  </div>
</div>
`;
